src/partnerlogoservice-plogo-p3-stg-route.yaml
---
kind: "Route"
apiVersion: "v1"
metadata:
  name: "partnerlogoservice"
  labels:
     component: "partnerlogoservice"
spec:
   host: "partnerlogo-stg.cisco.com"
   to:
     kind: "Service"
     name: "partnerlogoservice"
   port:
     targetPort: "web"
   tls:
     insecureEdgeTerminationPolicy: Allow
     termination: edge
